--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 					<a href="#" class="clearfix">
 						<img src="images/logo.png" alt="无印良品">
 						<dl>
-							<dt>无印良品</dt>
-							<dd>让您爱上极简的家</dd>
+							<dt>无&nbsp;&nbsp;&nbsp;印&nbsp;&nbsp;&nbsp;良&nbsp;&nbsp;&nbsp;品</dt>
+							<dd>让&nbsp;&nbsp;&nbsp;您&nbsp;&nbsp;&nbsp;爱&nbsp;&nbsp;&nbsp;上&nbsp;&nbsp;&nbsp;极&nbsp;&nbsp;&nbsp;简&nbsp;&nbsp;&nbsp;的&nbsp;&nbsp;&nbsp;家</dd>
 						</dl>
 					</a>
 				</h1>
-				<form action="" class="form_search">
+				<!-- <form action="" class="form_search">
 					<input type="text" placeholder="请输入">
 					<input type="submit" value="搜索">
-				</form>
+				</form> -->
 			</div>
 		</div>
 	</header>
@@ -271,12 +271,12 @@
 			<div class="container">
 				<h1>
 					<dl>
-						<dt>无印良品</dt>
-						<dd>让您爱上极简的家</dd>
+						<dt>无&nbsp;&nbsp;&nbsp;印&nbsp;&nbsp;&nbsp;良&nbsp;&nbsp;&nbsp;品</dt>
+						<dd>让&nbsp;&nbsp;&nbsp;您&nbsp;&nbsp;&nbsp;爱&nbsp;&nbsp;&nbsp;上&nbsp;&nbsp;&nbsp;极&nbsp;&nbsp;&nbsp;简&nbsp;&nbsp;&nbsp;的&nbsp;&nbsp;&nbsp;家</dd>
 					</dl>
 					<img src="images/weixin.png" alt="二维码">
 				</h1>
-				<ul class="clearfix">
+				<!-- <ul class="clearfix">
 					<li>
 						<h5>品质保障</h5>
 						<p>品质保障货真价实是我们的核心，没一个宝贝真实不夸大的描述，所有宝贝均通过质量验证。</p>
@@ -293,7 +293,7 @@
 						<h5>温馨提示</h5>
 						<p>品质保障货真价实是我们的核心，没一个宝贝真实不夸大的描述，所有宝贝均通过质量验证。</p>
 					</li>
-				</ul>
+				</ul> -->
 			</div>
 		</div>
 	</footer>
